--- a/libreoffice.html
+++ b/libreoffice.html
@@ -18,6 +18,7 @@
             @media (max-width:600px)  { /* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */  
                 p {
                     font-size: 15pt;
+					margin-right: 20pt;
                 }
                 ul.suggest {
                     font-size: 15pt;
@@ -26,6 +27,7 @@
             @media (min-width:961px)  { /* tablet, landscape iPad, lo-res laptops ands desktops */ 
                 p {
                     font-size: 11pt;
+					margin-right: 20pt;
                 }                
                 ul.suggest {
                     font-size: 11pt;
@@ -119,7 +121,7 @@
                 font-family: Helvetica, Arial, sans-serif;
                 white-space: nowrap;
             }
-			a:link {
+			a:link, a:active, a:visited {
 				color: blue; font-style: bold;
 			}
 
@@ -128,10 +130,10 @@
     <body>
         <div id="container">
             <div id="header">
-                <h1>Ирон растфыссынад бæлвырдгæнæн LibreOffice-ы мидæг</h1>
+                <h1>Ирон растфыссынад бæлвырдгæнæн LibreOffice-ы мидæг (ver 1.5)</h1>
 		<p style="color:gray"><a href="index.html">Бæлвырдгæнæн онлайн</a> | <a href="https://ironau.ru">ирон æвзаг</a> | <a href="https://t.me/fedogironau">ног хабæрттæ</a> | <a href="https://vk.com/barzafcag">ирон чингуытæ</a></p>
             </div>
-			<p>Офисный пакет LibreOffice — популярный свободный и бесплатный софт с поддержкой форматов MS Office. Пакетом LibreOffice для набора текстов и подготовки их к печати пользуется более 200 млн человек. Теперь в редакторе Writer пакета LibreOffice можно проверять орфографию осетинских текстов простым и удобным способом при помощи дополнения, которое нужно <a href="https://disk.yandex.ru/d/u4qSwx8Q4zJf5w" title="Яндекс.диск: удобное скачивание поддержки осетинского языка для LibreOffice">скачать здесь</a>.</p>
+			<p>Офисный пакет LibreOffice — популярный свободный и бесплатный софт с поддержкой форматов MS Office. Пакетом LibreOffice для набора текстов и подготовки их к печати пользуется более 200 млн человек. Теперь в редакторе Writer пакета LibreOffice можно проверять орфографию осетинских текстов простым и удобным способом при помощи дополнения, которое нужно <a href="https://disk.yandex.ru/d/H5KEihcOw3Icnw" title="Яндекс.диск: удобное скачивание поддержки осетинского языка для LibreOffice">скачать здесь</a> (если загрузка не начнётся, <a href="IrSpellchecker.v.1.5.oxt">вот альтернативная ссылка</a>).</p>
 			<p>Скачанный файл <tt>IrSpellchecker.oxt</tt> нужно два раза щёлкнуть — и он автоматически откроется в LibreOffice, если он установлен на компьютере. После установки дополнения с проверкой осетинской орфографии, на панели инструментов рядом со значком принтера появится значок с осетинским триколором и буквами IR, намекающими на слово «ирон». Выделите фрагмент текста и нажмите кнопку для расставления правильных апостроф и подчёркивания красным неправильно написанных слов.</p>
 			<p>Проверка орфографии позволяет найти досадные опечатки и быстрее привыкнуть к официальной орфографии. Основано на действующих нормах (свод правил орфографии и орфографические словари).</p>
 			<img src="img/1.jpg" hspace="5" vspace="4" />
@@ -140,7 +142,7 @@
 			<img src="img/4.jpg" />
 			<img src="img/5.jpg" />
 		</div>
-<!--LiveInternet counter--><script type="text/javascript">
+<div><!--LiveInternet counter--><script type="text/javascript">
 document.write("<a href='//www.liveinternet.ru/click' "+
 "target=_blank><img src='//counter.yadro.ru/hit?t26.10;r"+
 escape(document.referrer)+((typeof(screen)=="undefined")?"":
@@ -150,6 +152,6 @@ screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
 "' alt='' title='LiveInternet: показано число посетителей за"+
 " сегодня' "+
 "border='0' width='88' height='15'><\/a>")
-</script><!--/LiveInternet-->
+</script><!--/LiveInternet--></div>
     </body>
 </html>
