--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Проверка осетинской орфографии</title>
+        <title>Ирон растфыссынад бæлвырдгæнæн · Проверка осетинской орфографии</title>
         
         <meta charset="UTF-8">
         <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8">
@@ -136,6 +136,7 @@
         <div id="container">
             <div id="header">
                 <h1>Ирон растфыссынад бæлвырдгæнæн</h1>
+		<p style="color:gray">Дзырдуат ноггонд æрцыд 27.07.2023 | <a href="https://ironau.ru">ирон æвзаг</a> | <a href="https://t.me/fedogironau">ног хабæрттæ</a> | <a href="https://vk.com/barzafcag">ирон чингуытæ</a> | <a href="libreoffice.html" title="Добавьте проверку орфографии в текстовый редактор!">LibreOffice Writer (ver 1.5)</a></p>
                 <div id="hidden-div"><img src="img\loader.gif" style="width:26px;height:26px;" /></div>
             </div>
             <div id="editor_container">
@@ -290,9 +291,9 @@
 
                 parts.forEach(function(part) {
                     if (apo) {
-                        part = part.replace(/[’'ʻʽ‘]/gu, 'ʼ');
+                        part = part.replace(/[’'ʻʽ‘‛]/gu, 'ʼ');
                     }
-                    var checkPart = part.replace(/[ –,.?!…«:;»()$+<=>\t/'‘"^|~]/gu, '').replace(/[—]/gu, '-');  
+                    var checkPart = part.replace(/[ –,.?!…«:;»()$+<=>\t/'‘"„“^|~]/gu, '').replace(/[—]/gu, '-');  
 
                   //  console.log(checkPart);
                     if (window.hunspell.spell(checkPart) || (checkPart === '-')) {
@@ -430,5 +431,16 @@
     Quill.register(LinkBlot);
         
     </script>
+<!--LiveInternet counter--><script type="text/javascript">
+document.write("<a href='//www.liveinternet.ru/click' "+
+"target=_blank><img src='//counter.yadro.ru/hit?t26.10;r"+
+escape(document.referrer)+((typeof(screen)=="undefined")?"":
+";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
+screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
+";h"+escape(document.title.substring(0,150))+";"+Math.random()+
+"' alt='' title='LiveInternet: показано число посетителей за"+
+" сегодня' "+
+"border='0' width='88' height='15'><\/a>")
+</script><!--/LiveInternet-->
     </body>
 </html>
