--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Ирон растфыссынад бæлвырдгæнæн · Проверка осетинской орфографии</title>
+        <title>Проверка осетинской орфографии</title>
         
         <meta charset="UTF-8">
         <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8">
@@ -135,7 +135,7 @@
     <body>
         <div id="container">
             <div id="header">
-                <h1>Ирон растфыссынад бæлвырдгæнæн</h1>
+                <h1>Проверка орфографии дигорского языка - Ирон растфыссынад бæлвырдгæнæн</h1>
 		<p style="color:gray">Дзырдуат ноггонд æрцыд 27.07.2023 | <a href="https://ironau.ru">ирон æвзаг</a> | <a href="https://t.me/fedogironau">ног хабæрттæ</a> | <a href="https://vk.com/barzafcag">ирон чингуытæ</a> | <a href="libreoffice.html" title="Добавьте проверку орфографии в текстовый редактор!">LibreOffice Writer (ver 1.5)</a></p>
                 <div id="hidden-div"><img src="img\loader.gif" style="width:26px;height:26px;" /></div>
             </div>
