--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
             </div>
             <div id="editor_container">
                 <div id="toolbar">
-                  <button id="apo-button">Апострофтæ сраст кæн </button>
-                  <button id="save-button">Текст бафснай</button>
-                  <button id="copy-button">Къопи скæн</button>
+                  <button id="apo-button">Исправить апострофы </button>
+                  <button id="save-button">Очистить текст</button>
+                  <button id="copy-button">Скопировать</button>
                 </div>
     
                 <div id="editor" spellcheck="false" autocomplete="false" ></div>
@@ -179,7 +179,7 @@
         },
         theme: 'snow', 
         bounds: '#editor',
-        placeholder: "Дæ текст"
+        placeholder: "Введите текст"
     });
     
     var apoButton = document.querySelector('#apo-button');
