--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div id="container">
             <div id="header">
                 <h1>Проверка орфографии дигорского языка</h1>
-		<p style="color:gray">Дзырдуат ноггонд æрцыд 27.07.2023 | <a href="https://ironau.ru">Словарь Digor (Google Play)</a> | <a href="https://play.google.com/store/apps/details?id=com.budajti.digor">Словарь Digor (App Store)</a> | <a href="https://apps.apple.com/app/id6449050450">ирон чингуытæ</a> | <a href="libreoffice.html" title="Добавьте проверку орфографии в текстовый редактор!">LibreOffice Writer (ver 1.5)</a></p>
+		<p style="color:gray">Дзырдуат ноггонд æрцыд 27.07.2023 | <a href="https://play.google.com/store/apps/details?id=com.budajti.digor">Словарь Digor (Google Play)</a> | <a href="https://apps.apple.com/app/id6449050450">Словарь Digor (App Store)</a> | <a href="https://apps.apple.com/app/id6449050450">ирон чингуытæ</a> | <a href="libreoffice.html" title="Добавьте проверку орфографии в текстовый редактор!">LibreOffice Writer (ver 1.5)</a></p>
                 <div id="hidden-div"><img src="img\loader.gif" style="width:26px;height:26px;" /></div>
             </div>
             <div id="editor_container">
