--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Проверка осетинской орфографии</title>
+        <title>Проверка дигорской орфографии</title>
         
         <meta charset="UTF-8">
         <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8">
@@ -142,7 +142,7 @@
             <div id="editor_container">
                 <div id="toolbar">
                   <button id="apo-button">Исправить апострофы </button>
-                  <button id="save-button">Очистить текст</button>
+                  <button id="save-button">Сохранить текст</button>
                   <button id="copy-button">Скопировать</button>
                 </div>
     
