--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <body>
         <div id="container">
             <div id="header">
-                <h1>Проверка орфографии дигорского языка</h1>
+                <h1 style="font-size:1.7em">Проверка орфографии дигорского языка</h1>
 		<p style="color:gray">Словарь был обновлен 01.10.2023 | <a href="https://play.google.com/store/apps/details?id=com.budajti.digor">Словарь Digor (Google Play)</a> | <a href="https://apps.apple.com/app/id6449050450">Словарь Digor (App Store)</a></p>
                 <div id="hidden-div"><img src="img\loader.gif" style="width:26px;height:26px;" /></div>
             </div>
