--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 min-height: 10rem;
                 height: 100%;
                 flex: 1;
+		text-decoration: none !important;
                 display: flex;
                 flex-direction: column;
             }
