--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 border: 1px solid #777;
                 height: 100%;
                 flex: 1;
+		text-decoration: none !important;
                 overflow-y: auto;
                 width: 100%;
             }
@@ -85,6 +86,7 @@
             .ql-editor {
                 height: 100%;
                 flex: 1;
+		text-decoration: none !important;
                 overflow-y: auto;
                 width: 100%;
             }
