--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
                 text-decoration: none;
             }
             .suggestionLink:hover {
-                color: #999 !important; 
+                color: #999 !important;
+		text-decoration: none !important;
             }
             h1 {
                 font-family: PT Sans, Helvetica, Arial, sans-serif;
