--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             }
             * {
                 box-sizing: border-box;
+		text-decoration: none !important;	
             }
             #container {
                 height: 100%;
