--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		text-decoration: none !important;
             }
             h1 {
-                font-family: PT Sans, Helvetica, Arial, sans-serif;
+                font-family: Helvetica Neue, Helvetica Neue, Helvetica Neue, Helvetica Neue;
 				font-size: 1.4em;
             }
             ul.suggest {
@@ -132,7 +132,7 @@
                 display: block;
                 border: 1px solid #EEE;
                 background-color: rgb(225, 225, 225);
-                font-family: Helvetica, Arial, sans-serif;
+                font-family: Helvetica Neue, Helvetica Neue, Helvetica Neue;
                 white-space: nowrap;
             }
             </style>
