--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta charset="UTF-8">
         <meta name="http-equiv" content="Content-type: text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
+        <meta name="google-site-verification" content="BwEgVPKXrh-If-SE8XKVjiirIKmRNAs-PTLT0qTIDfk" />
+	    
         <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
 	<link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
         <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
