--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
             }
             * {
                 box-sizing: border-box;
-		text-decoration: none !important;	
+		text-decoration: none !important;
+		cursor: none;
             }
             #container {
                 height: 100%;
