--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
                 display: flex;
                 flex-direction: column;
             }
+		
+	    .no-cursor {
+  		cursor: none;
+  		background-color: wheat;
+	    }
+
             .ql-editor {
                 height: 100%;
                 flex: 1;
