--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
                     font-size: 11pt;
                 }
             }
+	    @media (max-width: 1000px) {
+    		* {
+        		cursor: none;
+    		  }
+	    }
             html,body {
                 margin: 0;
                 height: 100%;
