--- a/index.html
+++ b/index.html
@@ -92,7 +92,15 @@
                 display: flex;
                 flex-direction: column;
             }
-		
+	    .no_highlights{
+      		-webkit-tap-highlight-color: transparent;
+      		-webkit-touch-callout: none;
+      		-webkit-user-select: none;
+      		-khtml-user-select: none;
+      		-moz-user-select: none;
+      		-ms-user-select: none;
+      		user-select: none;
+    	    }
 	    .no-cursor {
   		cursor: none;
   		background-color: wheat;
