--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
                 font-family: Helvetica Neue, Helvetica Neue, Helvetica Neue;
                 white-space: nowrap;
             }
+	    input[type="text"]:focus {
+    		cursor: none;
+	      }
             </style>
     </head>
     <body>
