--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
 		text-decoration: none !important;
 		cursor: none;
             }
+	    html {
+   		-webkit-tap-highlight-color: transparent;
+	    }
             #container {
                 height: 100%;
                 display: flex;
